[workspace]
resolver = "2"
members = ["api-server","engine", "matcher"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "streams","aio"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version =  "0.3.23", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15.7"
