[package]
name = "matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine"}
tokio = { workspace = true }
serde = { workspace = true}
serde_json = { workspace =  true }
redis = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
